# gr-flowgraph-runner

./: .gitignore  CMakeLists.txt  README.md  android_deploy_libs.sh  android_deploy_qt.sh
android/: AndroidManifest.xml  build.gradle
android/assets/test/: untitled.py
android/src/org/adi/grflowgraphrunner/: GrFlowGraphRunnerActivity.java  GrFlowGraphRunnerApplication.java
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  pygrflow.cpp  pygrflow.h  pylogger.cpp  pylogger.h  pythoninterpreter.cpp  pythoninterpreter.h
ui/: mainwindow.ui
